--- a/SemesterProject/app/src/main/res/layout/content_scrolling.xml
+++ b/SemesterProject/app/src/main/res/layout/content_scrolling.xml
@@ -13,6 +13,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/text_margin"
-        android:text="@string/large_text" />
+        android:text="@string/large_textRatio" />
+
+
 
 </androidx.core.widget.NestedScrollView>
