--- a/SemesterProject/app/src/main/res/layout/content_scrolling.xml
+++ b/SemesterProject/app/src/main/res/layout/content_scrolling.xml
@@ -13,8 +13,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/text_margin"
-        android:text="@string/large_textRatio" />
-
-
+        android:text="@string/large_text" />
 
 </androidx.core.widget.NestedScrollView>
