--- a/SemesterProject/app/src/main/res/layout/activity_math_prop_num_content_page.xml
+++ b/SemesterProject/app/src/main/res/layout/activity_math_prop_num_content_page.xml
@@ -6,99 +6,73 @@
     android:layout_height="match_parent"
     tools:context=".MathPropNumContentPage">
 
-    <TextView
-        android:id="@+id/PNumTextView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="GCF and LCM"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.44"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.528" />
-
     <Button
         android:id="@+id/buttonPN1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:shadowColor="#FFFFFF"
         android:text="Start Quiz 1"
-        android:textColor="#040303"
-        android:textColorHint="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.434"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.232" />
+        app:layout_constraintVertical_bias="0.25" />
 
     <Button
         android:id="@+id/buttonPN2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:shadowColor="#FFFFFF"
         android:text="Start Quiz 2"
-        android:textColor="#040303"
-        android:textColorHint="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.434"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.424" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/buttonPN3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:shadowColor="#FFFFFF"
         android:text="Start Quiz 3"
-        android:textColor="#040303"
-        android:textColorHint="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.434"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.62" />
+        app:layout_constraintVertical_bias="0.689" />
 
     <TextView
-        android:id="@+id/textViewHighScoreQuiz1"
-        android:layout_width="101dp"
-        android:layout_height="37dp"
-        android:text="Highscore: 0"
+        android:id="@+id/textViewPN1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Properties of Addition and Multiplication"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.859"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.235" />
+        app:layout_constraintVertical_bias="0.133" />
 
     <TextView
-        android:id="@+id/PNumTextView1"
-        android:layout_width="244dp"
-        android:layout_height="49dp"
-        android:text="Properties of addition and Multiplication"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.433"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.14" />
-
-    <TextView
-        android:id="@+id/PNumTextView2"
+        android:id="@+id/textViewPN2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Whole Numbers"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.458"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.345" />
+        app:layout_constraintVertical_bias="0.398" />
 
-
-
+    <TextView
+        android:id="@+id/textViewPN3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="GCF and LCM"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.602" />
 </androidx.constraintlayout.widget.ConstraintLayout>
