--- a/SemesterProject/app/src/main/res/layout/activity_math_percentage_content.xml
+++ b/SemesterProject/app/src/main/res/layout/activity_math_percentage_content.xml
@@ -1,9 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MathPercentageContent">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Percents"
+                android:textAlignment="center"
+                android:textColor="@android:color/holo_red_dark"
+                android:textSize="25dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:text="When we say 'Percent' we are really saying 'per 100'"
+                android:textAlignment="center"
+                android:textColor="@android:color/holo_blue_light"
+                android:textSize="20dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="  One percent (1%) means 1 per 100."
+                android:textColor="@android:color/black"
+                android:textSize="10dp" />
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="350dp"
+                android:src="@drawable/mathpercent1" />
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="404dp"
+                android:src="@drawable/mathpercent2" />
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="297dp"
+                android:src="@drawable/mathpercent3" />
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="297dp"
+                android:src="@drawable/mathpercent4" />
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="297dp"
+                android:src="@drawable/mathpercent5" />
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="297dp"
+                android:src="@drawable/mathpercent6" />
+
+        </LinearLayout>
+
+
+
+    </ScrollView>
+
+
+</LinearLayout>
