--- a/SemesterProject/app/src/main/res/layout/activity_math_a_r2.xml
+++ b/SemesterProject/app/src/main/res/layout/activity_math_a_r2.xml
@@ -1,9 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MathAR2">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Exponents"
+                android:textAlignment="center"
+                android:textColor="@android:color/holo_red_dark"
+                android:textSize="25dp" />
+
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="229dp"
+                android:src="@drawable/mathexponent1" />
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="346dp"
+                android:src="@drawable/mathexponent2" />
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="297dp"
+                android:src="@drawable/mathexponent3" />
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="252dp"
+                android:src="@drawable/mathexponent4" />
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="297dp"
+                android:src="@drawable/mathexponent5" />
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="261dp"
+                android:src="@drawable/mathexponent6" />
+
+        </LinearLayout>
+
+
+
+    </ScrollView>
+
+
+</LinearLayout>
