--- a/SemesterProject/app/src/main/res/layout/activity_math_p_n1.xml
+++ b/SemesterProject/app/src/main/res/layout/activity_math_p_n1.xml
@@ -1,9 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MathPN1">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Properties of addition and multiplication"
+                android:textAlignment="center"
+                android:textColor="@android:color/holo_red_dark"
+                android:textSize="25dp" />
+
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="197dp"
+                android:src="@drawable/mathprop1" />
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="230dp"
+                android:src="@drawable/mathprop2" />
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="260dp"
+                android:src="@drawable/mathprop3" />
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="227dp"
+                android:src="@drawable/mathprop4" />
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="230dp"
+                android:src="@drawable/mathprop5" />
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="261dp"
+                android:src="@drawable/mathprop6" />
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="297dp"
+                android:src="@drawable/mathprop7" />
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="297dp"
+                android:src="@drawable/mathprop8" />
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="245dp"
+                android:src="@drawable/mathprop9" />
+
+        </LinearLayout>
+
+
+
+    </ScrollView>
+
+
+</LinearLayout>
