--- a/SemesterProject/app/src/main/res/layout/activity_math_prop_num_content_page.xml
+++ b/SemesterProject/app/src/main/res/layout/activity_math_prop_num_content_page.xml
@@ -38,19 +38,19 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.689" />
+        app:layout_constraintVertical_bias="0.878" />
 
     <TextView
         android:id="@+id/textViewPN1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Properties of Addition and Multiplication"
+        android:text="Properties of Addition"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.133" />
+        app:layout_constraintVertical_bias="0.084" />
 
     <TextView
         android:id="@+id/textViewPN2"
@@ -68,11 +68,35 @@
         android:id="@+id/textViewPN3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="GCF and LCM"
+        android:text="GCF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.602" />
+
+    <TextView
+        android:id="@+id/LCM"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="LCM"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.723" />
+
+    <TextView
+        android:id="@+id/textViewPNx"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Properties of Multiplication"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.183" />
 </androidx.constraintlayout.widget.ConstraintLayout>
