--- a/SemesterProject/app/src/main/res/layout/activity_math_neg_num_content_page.xml
+++ b/SemesterProject/app/src/main/res/layout/activity_math_neg_num_content_page.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MathNegNumContentPage">
+    tools:context=".MathNegNumContentPage"
+    android:background="@drawable/mathcontent4">
 
     <TextView
         android:id="@+id/NNumTextView3"
