--- a/SemesterProject/app/src/main/res/layout/activity_math_prop_num_content_page.xml
+++ b/SemesterProject/app/src/main/res/layout/activity_math_prop_num_content_page.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MathPropNumContentPage">
+    tools:context=".MathPropNumContentPage"
+    android:background="@drawable/mathcontent6">
 
     <Button
         android:id="@+id/buttonPN1"
@@ -50,7 +51,7 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.084" />
+        app:layout_constraintVertical_bias="0.126" />
 
     <TextView
         android:id="@+id/textViewPN2"
@@ -83,10 +84,10 @@
         android:text="LCM"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.723" />
+        app:layout_constraintVertical_bias="0.745" />
 
     <TextView
         android:id="@+id/textViewPNx"
