--- a/SemesterProject/app/src/main/res/layout/activity_math_ratio_page.xml
+++ b/SemesterProject/app/src/main/res/layout/activity_math_ratio_page.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MathRatioPage">
+    tools:context=".MathRatioPage"
+    android:background="@drawable/mathcontent1">
 
     <TextView
         android:id="@+id/textViewPercentage"
