--- a/SemesterProject/app/src/main/res/layout/activity_math_arith_operation_content_page.xml
+++ b/SemesterProject/app/src/main/res/layout/activity_math_arith_operation_content_page.xml
@@ -12,6 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Order of operations"
+        android:textColor="@android:color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.449"
@@ -78,9 +79,11 @@
 
     <TextView
         android:id="@+id/ArOperTextView1"
-        android:layout_width="195dp"
-        android:layout_height="71dp"
+        android:layout_width="200dp"
+        android:layout_height="78dp"
         android:text="Addition, Subtraction and Multiplcation  and Division of Decimal Numbers"
+        android:textAlignment="center"
+        android:textColor="@android:color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -92,6 +95,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Exponents"
+        android:textColor="@android:color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.437"
